Adding the toString test and finishing the item tests for Entity