@@ -10,12 +10,16 @@ class EntityTest {
     private Weapon battleRifle;
     private Weapon plasmaRifle;
 
-    private Food MRE;
+    private String mreDescription;
+    private Stats mreStatsEffect;
+    private Food humanMRE;
+    private Food alienMRE;
 
     private Ability brace;
 
     private Human humanEntityTest;
     private Alien alienEntityTest;
+
 
     @BeforeEach
     void setUp() {
@@ -26,9 +30,10 @@ class EntityTest {
         String prDescription = "The Okarda'phaa-pattern Rifle (UNSC Type classification: Type-25 Directed Energy Rifle, T-25 DER), more commonly known as the plasma rifle or plasma gun, is a fully automatic rifle, formerly serving as a Covenant infantry weapon. The Type-25 DER was the primary weapon of the Covenant's officer corps, standard issue to Sangheili and Jiralhanae. However, lower-caste species within the Covenant who had attained significant rank within the Covenant military were also issued this weapon during operations. The Type-25 DER was one of the earliest and most frequently encountered Covenant plasma weapons. It occupies a role very similar to the human assault rifle.";
         plasmaRifle = new Weapon("Plasma Rifle", prDescription, 1600, 1);
 
-        String mreDescription = "a self-contained, prepackaged meal designed for military and emergency use, providing a full day's caloric and nutritional requirements in a single, lightweight pouch";
-        Stats mreStatsEffect = new Stats(500, 200, 0);
-        MRE = new Food("MRE", mreDescription, mreStatsEffect, 1);
+        mreDescription = "a self-contained, prepackaged meal designed for military and emergency use, providing a full day's caloric and nutritional requirements in a single, lightweight pouch";
+        mreStatsEffect = new Stats(500, 200, 0);
+        humanMRE = new Food("MRE", mreDescription, mreStatsEffect, 1);
+        alienMRE = new Food("MRE", mreDescription, mreStatsEffect, 1);
 
         brace = new Ability("Brace", "Raise your defences to prepare for an attack", "Universal", new Stats(0, 0, 500));
 
@@ -143,8 +148,8 @@ class EntityTest {
         assertEquals(1, listOfAlienWeapons.size());
 
         // testing the storing of food and testing how many different foods we have
-        humanEntityTest.storeItem(MRE);
-        alienEntityTest.storeItem(MRE);
+        humanEntityTest.storeItem(humanMRE);
+        alienEntityTest.storeItem(alienMRE);
 
         ArrayList<IItem> listOfHumanFood = humanEntityTest.listItems("Food");
         ArrayList<IItem> listOfAlienFood = alienEntityTest.listItems("Food");
@@ -155,11 +160,122 @@ class EntityTest {
         listOfHumanItems = humanEntityTest.listItems();
         listOfAlienItems = alienEntityTest.listItems();
 
-        Food testFood = (Food) listOfHumanFood.get(0);
-        Stats testStats = testFood.eatFood(humanEntityTest.getStats());
+        Food humanMREs = (Food) listOfHumanFood.getFirst();
+        Food alienMREs = (Food) listOfHumanFood.getFirst();
+
+        assertEquals(1, humanMREs.getQuantity());
+        assertEquals(1, alienMREs.getQuantity());
 
         assertEquals(2, listOfHumanItems.size());
         assertEquals(2, listOfAlienItems.size());
 
+        Food MRE2 = new Food("MRE", mreDescription, mreStatsEffect, 1);
+        Food MRE3 = new Food("MRE", mreDescription, mreStatsEffect, 1);
+        humanEntityTest.storeItem(MRE2);
+        alienEntityTest.storeItem(MRE3);
+
+        assertEquals(2, humanMREs.getQuantity());
+        assertEquals(2, alienMREs.getQuantity());
+
+        assertEquals(2, listOfHumanItems.size());
+        assertEquals(2, listOfAlienItems.size());
+
+    }
+
+    @Test
+    void testToString() {
+        humanEntityTest.learnAbility(brace);
+        alienEntityTest.learnAbility(brace);
+
+        humanEntityTest.storeItem(humanMRE);
+        alienEntityTest.storeItem(alienMRE);
+
+        humanEntityTest.storeItem(battleRifle);
+        alienEntityTest.storeItem(plasmaRifle);
+
+        String humanExpect = """
+                Name: John
+                Equipped Weapon: null
+                Stats
+                =========
+                Health: 1000
+                Base Attack: 500
+                Defense Points: 500
+                
+                Abilities
+                ===========
+                Name: Brace
+                Description: Raise your defences to prepare for an attack
+                Type: Universal
+                
+                Status Effect
+                --------------
+                Health: 0
+                Base Attack: 0
+                Defense: 500
+                
+                
+                
+                Inventory
+                ===========
+                Name: Battle Rifle
+                Description: The BR55 Service Rifle is an infantry battle rifle in service within the armed forces of the United Nations Space Command. Among UNSC service personnel, the BR55 has accumulated a number of nicknames including the "Monkey Wrench", "BR", and the "Big Boy". It is notable for its powerful three-round burst fire and accurate 2× scope, making it more efficient at farther ranges than the MA5 series assault rifles.
+                Type: Weapon
+                
+                Name: MRE
+                Description: a self-contained, prepackaged meal designed for military and emergency use, providing a full day's caloric and nutritional requirements in a single, lightweight pouch
+                Type: Food
+                
+                Status Effect
+                --------------
+                Health: 500
+                Base Attack: 200
+                Defense: 0
+                
+                """;
+
+        String alienExpect = """
+                Name: Arbiter
+                Equipped Weapon: null
+                Stats
+                =========
+                Health: 300
+                Base Attack: 1200
+                Defense Points: 200
+                
+                Abilities
+                ===========
+                Name: Brace
+                Description: Raise your defences to prepare for an attack
+                Type: Universal
+                
+                Status Effect
+                --------------
+                Health: 0
+                Base Attack: 0
+                Defense: 500
+                
+                
+                
+                Inventory
+                ===========
+                Name: Plasma Rifle
+                Description: The Okarda'phaa-pattern Rifle (UNSC Type classification: Type-25 Directed Energy Rifle, T-25 DER), more commonly known as the plasma rifle or plasma gun, is a fully automatic rifle, formerly serving as a Covenant infantry weapon. The Type-25 DER was the primary weapon of the Covenant's officer corps, standard issue to Sangheili and Jiralhanae. However, lower-caste species within the Covenant who had attained significant rank within the Covenant military were also issued this weapon during operations. The Type-25 DER was one of the earliest and most frequently encountered Covenant plasma weapons. It occupies a role very similar to the human assault rifle.
+                Type: Weapon
+                
+                Name: MRE
+                Description: a self-contained, prepackaged meal designed for military and emergency use, providing a full day's caloric and nutritional requirements in a single, lightweight pouch
+                Type: Food
+                
+                Status Effect
+                --------------
+                Health: 500
+                Base Attack: 200
+                Defense: 0
+                
+                """;
+
+        assertEquals(humanExpect, humanEntityTest.toString());
+        assertEquals(alienExpect, alienEntityTest.toString());
     }
 }
